<resources>
    <string name="app_name">Depanin</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="profile_info">Profile info</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="zoom">15f</string>
    <string name="forgot_password"><u>Forgot password?</u></string>

    <string name="permission_denied">Permission denied</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_address">My Address</string>
    <string name="language">Language</string>
    <string name="contact_us">Contact us</string>
    <string name="select_your_town_please">Select your town please</string>
    <string name="edit_specialty">Edit Specialty</string>
    <string name="please_wait">Please wait</string>
    <string name="updating_user">Updating User…</string>
    <string name="password_not_matching">Confirm Password is not matching !</string>
    <string name="champs_empty">Champs are empty !</string>
    <string name="one_city">You Select Only One City if You Want to Change It Press Cancel</string>
    <string name="username_is_required">Username is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="verifying_user">Verifying User…</string>
    <string name="your_username_is_false">Your Username is false</string>
    <string name="your_password_is_false">Your Password is false</string>
    <string name="info">Info</string>
    <string name="cheking_internet">You are not Connected plz check you connection network .</string>
    <string name="try_again">Try again</string>
    <string name="ok">OK</string>
    <string name="sending_email">Sending email …</string>
    <string name="min_9_characters">Password Has To Be At Least 9 Characters Long</string>
    <string name="min_1_upper_case">Password Must Contain 1 Upper-case Character</string>
    <string name="min_1_lower_case">Password Must Contain 1 Lower-case Character</string>
    <string name="min_1_number">Password Must Contain 1 Number</string>
    <string name="min_1_symbol">Password Must Contain 1 Symbol</string>
    <string name="provider">provider</string>
    <string name="worker">worker</string>
    <string name="selection_type">Please Select your Type</string>
    <string name="sign_up_failed">Sign Up Failed .</string>
    <string name="number_is_too_short">Number is too short</string>
    <string name="number_is_too_long">Number is too long</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="verifying_phone_number">Verifying Phone Number…</string>
    <string name="phone_number_exists">This Phone Number Exists</string>
    <string name="cin_is_required">CIN is required</string>
    <string name="speciality_is_required">Speciality is required</string>
    <string name="cin_number_is_too_short">Cin number is too short</string>
    <string name="cin_number_is_too_long">Cin number is too long</string>
    <string name="select_your_gouvernement">Select your Gouvernement</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="edit_location">Edit Location</string>
    <string name="username">username</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="welcome_to_depanini">Welcome to Depanini</string>
    <string name="we_are_designing_to_assist_students_with_various_house_repair_tasks_by_connecting_them_with_local_service_providers_who_can_assist_them_with_the_repair">We are designing to assist students with various house repair tasks by connecting them with local service providers who can assist them with the repair.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_a_member">Already a member?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_now">Sign In Now</string>
    <string name="password">password</string>
    <string name="sign_in_min">Sign In</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="sign_up_from_here">Sign Up from here</string>
    <string name="create_account">Create Account</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_from_here">Sign In from here</string>
    <string name="which_one_are_you">Which one are you ?</string>
    <string name="we_will_use_this_data_to_give_you_na_better_experience">We will use this data to give you\na better experience</string>
    <string name="phone_verification">Phone verification</string>
    <string name="please_enter_your_mobile_number_nto_verify_you_account">Please enter your mobile number\nto verify you account</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="worker_profile">Worker Profile</string>
    <string name="foulen_fouleni">foulen fouleni</string>
    <string name="tunis_tunisia">tunis,tunisia</string>
    <string name="plumbing">Plumbing</string>
    <string name="call">Call</string>
    <string name="worker_profile_info">Worker Profile Info</string>
    <string name="enter_your_username_password_n_and_addd_a_profile_picture">Enter your username, password \n and addd a profile picture.</string>
    <string name="cin">CIN</string>
    <string name="speciality">Speciality</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="favorite_list">Favorite List</string>
    <string name="change_language">Change Language</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="edit_speciality">Edit Speciality</string>
    <string name="choose_your_speciality">Choose your Speciality</string>
    <string name="loading">Loading…</string>
    <string name="roberto_muslihin">Roberto Muslihin</string>
    <string name="contact">Contact</string>
    <string name="all">All</string>
    <string name="electricity">Electricity</string>
    <string name="painting">Painting</string>
    <string name="gardener">Gardener</string>
    <string name="security">Security</string>
    <string name="masonry">Masonry</string>
    <string name="carpenter">Carpenter</string>
    <string name="listed_by">Listed By </string>
    <string name="search">Search…</string>

</resources>