<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secand_color"

    tools:context=".view.UserInfoActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/background_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="#1C58C9"
            android:src="@drawable/ic_arrow_back_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/img_horizon"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="168dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/logoo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="#1C58C9"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/constraint" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="25dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_plus"
        app:civ_border_color="@color/white"
        android:tint="@color/primary_color"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/user_image"
        app:layout_constraintEnd_toEndOf="@+id/user_image"
        app:layout_constraintTop_toTopOf="@+id/user_image"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:hint="@string/username"
        app:errorEnabled="true"
        app:counterMaxLength="20"
        app:helperTextTextColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:maxLength="20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        app:endIconDrawable="@drawable/password_icon"
        app:endIconMode="password_toggle"
        android:hint="@string/password"
        android:layout_marginTop="4dp"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/background_button"
        android:drawableRight="@drawable/ic_arrow_forward"
        android:paddingLeft="30dp"
        android:paddingRight="10dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox"
        android:buttonTint="#1C58C9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ABABAB"
        android:text="@string/i_agree_to_the"
        app:layout_constraintStart_toStartOf="@+id/label_password"
        app:layout_constraintTop_toBottomOf="@+id/label_password" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions"
        android:layout_marginTop="13dp"
        android:layout_marginStart="1dp"
        android:textColor="#1C58C9"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/label_password"
/>
    <TextView
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="#ABABAB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account" />

    <TextView
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/sign_in_from_here"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textAllCaps="false"
        android:textColor="#1C58C9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account" />

</androidx.constraintlayout.widget.ConstraintLayout>